--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^6.0.0",
+		"@sveltejs/adapter-auto": "^6.0.1",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@sveltejs/kit": "^2.21.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/gif.js": "^0.2.5",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"typescript": "^5.0.0",
-		"vite": "^6.2.6"
+		"svelte": "^5.33.10",
+		"svelte-check": "^4.2.1",
+		"typescript": "^5.8.3",
+		"vite": "^6.3.5"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
@@ -28,7 +28,6 @@
 		]
 	},
 	"dependencies": {
-		"gif.js": "^0.2.0",
-		"html2canvas": "^1.4.1"
+		"gif.js": "^0.2.0"
 	}
 }
